# CppLabSnickers

./: README.dm
24L-PROI-TASK1-Skutnik-Albert-master/: Fraction.sln  readme.md
24L-PROI-TASK1-Skutnik-Albert-master/FractionApp/: FractionApp.cpp  FractionApp.vcxproj  FractionApp.vcxproj.filters
24L-PROI-TASK1-Skutnik-Albert-master/FractionLib/: Fraction.cpp  Fraction.h  FractionLib.vcxproj  FractionLib.vcxproj.filters
24L-PROI-TASK1-Skutnik-Albert-master/FractionUnitTest/: FractionTest.cpp  FractionUnitTest.vcxproj
24L-PROI-TASK2-Skutnik-Albert-main/: CMakeLists.txt  Time.cpp  Time.h  makefile  tasks_gpp.json  test_google.cpp  time_tests.cpp
24L-PROI-TASK3-Skutnik-Albert-main/: Stos.sln
24L-PROI-TASK3-Skutnik-Albert-main/StosApp/: StosApp.cpp  StosApp.vcxproj  StosApp.vcxproj.filters
24L-PROI-TASK3-Skutnik-Albert-main/StosLib/: Stack.cpp  Stack.h  StosLib.vcxproj
24L-PROI-TASK3-Skutnik-Albert-main/StosTest/: StackUnitTest.cpp  StosTest.vcxproj
24L-PROI-TASK4-Skutnik-Albert-main/: LoggerApp.sln
24L-PROI-TASK4-Skutnik-Albert-main/Logger/: Logger.vcxproj  Logger.vcxproj.filters  LoggerApp.cpp  log.csv  log.txt
24L-PROI-TASK4-Skutnik-Albert-main/LoggerLib/: CSVLogger.cpp  CSVLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  LoggerLib.vcxproj  LoggerLib.vcxproj.filters  OneWayList.cpp  OneWayList.h
24L-PROI-TASK4-Skutnik-Albert-main/LoggerTest/: LoggerTest.vcxproj  LoggerTests.cpp  OneWayListTest.cpp
